# efmsoft_libs_usage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt  main.cpp
